syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Asset {
    string symbol = 1;
    string cusip = 2;
    string description = 3;
    string exchange = 4;
    optional string assetType = 5;
    optional float high52 = 6;
    optional float low52 = 7;
    optional float dividendAmount = 8;
    optional float dividendYield = 9;
    optional google.protobuf.Timestamp dividendDate = 10;
    optional float peRatio = 11;
    optional float pegRatio = 12;
    optional float pbRatio = 13;
    optional float prRatio = 14;
    optional float pcfRatio = 15;
    optional float grossMarginTTM = 16;
    optional float grossMarginMRQ = 17;
    optional float netProfitMarginTTM = 18;
    optional float netProfitMarginMRQ = 19;
    optional float operatingMarginTTM = 20;
    optional float operatingMarginMRQ = 21;
    optional float returnOnEquity = 22;
    optional float returnOnAssets = 23;
    optional float returnOnInvestment = 24;
    optional float quickRatio = 25;
    optional float currentRatio = 26;
    optional float interestCoverage = 27;
    optional float totalDebtToCapital = 28;
    optional float ltDebtToEquity = 29;
    optional float totalDebtToEquity = 30;
    optional float epsTTM = 31;
    optional float epsChangePercentTTM = 32;
    optional float epsChangeYear = 33;
    optional float epsChange = 34;
    optional float revChangeYear = 35;
    optional float revChangeTTM = 36;
    optional float revChangeIn = 37;
    optional float sharesOutstanding = 38;
    optional float marketCapFloat = 39;
    optional float marketCap = 40;
    optional float bookValuePerShare = 41;
    optional float shortIntToFloat = 42;
    optional float shortIntDayToCover = 43;
    optional float divGrowthRate3Year = 44;
    optional float dividendPayAmount = 45;
    optional google.protobuf.Timestamp dividendPayDate = 46;
    optional float beta = 47;
    optional float avg10DaysVolume = 48;
    optional float avg1DayVolume = 49;
    optional float avg3MonthVolume = 50;
    optional google.protobuf.Timestamp declarationDate = 51;
    optional int32 dividendFreq = 52;
    optional float eps = 53;
    optional int64 dtnVolume = 54;
    optional google.protobuf.Timestamp nextDividendPayDate = 55;
    optional google.protobuf.Timestamp nextDividendDate = 56;
    optional float divPayAmount = 57;
    optional int32 divFreq = 58;
    optional float avg1YearVolume = 59;
    optional float divYield = 60;
    optional google.protobuf.Timestamp nextDivPayDate = 61;
    optional google.protobuf.Timestamp nextDivExDate = 62;
    optional google.protobuf.Timestamp divPayDate = 63;
    optional google.protobuf.Timestamp lastEarningsDate = 64;
    optional float divAmount = 65;
    optional google.protobuf.Timestamp divExDate = 66;
    optional string assetMainType = 67;
    optional google.protobuf.Timestamp downloadDate = 68;
    optional float closePrice = 69;
    optional float openPrice = 70;
    string exchangeName = 71;
    optional string securityStatus = 72;
    int64 ssid = 73;
}
